# bohr

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  DebuggingHeuristics.md  Dockerfile  Heuristics.md  LICENSE  README.rst  bohr.json  docs.md  dvc.yaml  heuristic_metrics.json  index.md  label_model_metrics.json  labels.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tasks.json
.bohr/: local.config  transient_stages.json
.dvc/: config
bohr/: __init__.py  core.py  labels.py  labels_dict.json  nlp_utils.py  params.py  snorkel.py  snorkel_utils.py
data/: .gitignore  commit_to_files.csv.dvc  commit_to_issues.csv.dvc  test.dvc  train.dvc
data-preprocessing/: developer_labeled.py  fine-grained-refactorings.py  smells.sh
dataloaders/: 1151-commits.py  berger.py  bugginess-train.py  herzig.py  smells-test.py  smells-train.py
datamappers/: idans_commit.py
datasets/: 1151-commits.py  berger.py  bugginess-train.py  herzig.py  idans-dataset.py  idans-dataset2.py  smells-test.py  smells-train.py
doc/: main.md  tutorial-1-reproducing-experiments.md  tutorial-2-debugging-heuristics.md
docs/: .index.rst.swp  Heuristics.rst  index.md  index.rst
downloaded-data/: .gitignore  1151-commits.csv.dvc  200k-commits-files.csv.7z.dvc  200k-commits-issues.csv.dvc  200k-commits-link-issues.csv.dvc  200k-commits-manual-labels.csv.dvc  200k-commits.csv.dvc  b_b.7z.dvc  berger.csv.dvc  bugginess_train.7z.dvc  bugginess_train.dvc  developer-labeled-commits.zip.dvc  fine-grained-refactorings.zip.dvc  herzig.csv.dvc  (+4 more)
(+354 files in other folders)
