
[tool.poetry]
name = "bohr"
version = "0.1.0"
description = ""
authors = ["hlib <hlibbabii@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.9b0"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
